Header constraints up and down the breakpoints, all sorted.

--- a/html/css/output/patterns/0-header.css
+++ b/html/css/output/patterns/0-header.css
@@ -134,6 +134,19 @@
   .header__part--search {
     width: 50%;
     float: left; }
+  .header__part--brand {
+    text-align: left; }
+  .header__part--brand .icon-sos-logo {
+    margin: 2em 0 0 10%; }
+  .header__part--search {
+    text-align: right;
+    padding: 1.8em 5% 0 0; }
+  .header__part--search .search__container {
+    margin: 0 0 0 0;
+    float: right;
+    max-width: 18em; }
+  .header__part--search .search__advanced {
+    max-width: 12em; }
   .js .nav__trigger {
     display: none; }
   .nav-collapse {
@@ -148,8 +161,7 @@
     text-align: left;
     padding: 1.8em 0 0 0; }
   .header__part--search .search__container {
-    margin: 0 0 0 21em; }
-  .header__part--search .search__advanced {
-    max-width: 20em; } }
+    margin: 0 0 0 22em;
+    float: none; } }
 
 /*# sourceMappingURL=0-header.css.map */
