--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1346,6 +1346,19 @@ footer i {
   .header__part--search {
     width: 50%;
     float: left; }
+  .header__part--brand {
+    text-align: left; }
+  .header__part--brand .icon-sos-logo {
+    margin: 2em 0 0 10%; }
+  .header__part--search {
+    text-align: right;
+    padding: 1.8em 5% 0 0; }
+  .header__part--search .search__container {
+    margin: 0 0 0 0;
+    float: right;
+    max-width: 18em; }
+  .header__part--search .search__advanced {
+    max-width: 12em; }
   .js .nav__trigger {
     display: none; }
   .nav-collapse {
@@ -1360,9 +1373,8 @@ footer i {
     text-align: left;
     padding: 1.8em 0 0 0; }
   .header__part--search .search__container {
-    margin: 0 0 0 21em; }
-  .header__part--search .search__advanced {
-    max-width: 20em; } }
+    margin: 0 0 0 22em;
+    float: none; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
