--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1068,7 +1068,7 @@ pre {
 
 .icon-footer-partner-nls {
   max-width: 12.25em;
-  height: 7.0625em; }
+  height: 6.906875em; }
 
 .icon-footer-partner-cs {
   max-width: 8.3125em;
@@ -1174,7 +1174,7 @@ footer i {
   .footer__top__report-issues span, .footer__top__partners span {
     text-align: left;
     max-width: 13.25em;
-    font-size: 1.1em; }
+    font-size: 1.2em; }
   .footer__top__report-issues {
     width: 25%;
     float: right;
@@ -1244,6 +1244,8 @@ footer i {
 
 .header__part--brand {
   background-position: left top; }
+  .header__part--brand a {
+    border-bottom: none; }
   .header__part--brand .icon-sos-logo {
     margin: 2em 8% 0 8%;
     width: 84%;
@@ -1273,7 +1275,8 @@ footer i {
 
 .header__search-trigger {
   background-color: #008EBE;
-  cursor: pointer; }
+  cursor: pointer;
+  border-bottom: 0.3em solid #003552; }
   .header__search-trigger .icon-search {
     width: 1.6875em;
     height: 1.75em;
@@ -1285,10 +1288,17 @@ footer i {
     margin: 0.7em 0 0 0;
     color: #ffffff;
     float: left; }
+  .header__search-trigger.active {
+    border-bottom: none; }
 
 .header__part--search {
   background-position: right top;
-  padding: 1.8em 5% 0 5%; }
+  border-bottom: 0.3em solid #003552; }
+  .header__part--search form {
+    background-color: inherit;
+    margin: 0;
+    width: 100%;
+    padding: 3.1em 0 0 0; }
   .header__part--search .search__container {
     width: 100%;
     max-width: 20em;
@@ -1301,6 +1311,7 @@ footer i {
     max-width: 13.92em;
     display: inline-block; }
   .header__part--search label {
+    display: none;
     font-size: 1.3em;
     font-weight: 600; }
   .header__part--search input[type="text"] {
@@ -1323,19 +1334,20 @@ footer i {
     font-size: 1.1em;
     outline: 0;
     border: 0.135em solid #003552;
-    vertical-align: -2.23em;
     max-width: 4.55625em;
     height: 2.14em; }
     .header__part--search input[type="submit"]:focus, .header__part--search input[type="submit"]:hover {
       background-color: #008EBE; }
   .header__part--search .search__advanced {
     display: inline-block;
-    font-size: 1.125em;
+    font-size: 1em;
     font-weight: 300;
     padding-top: 0.5em; }
     .header__part--search .search__advanced a:focus, .header__part--search .search__advanced a:hover {
       color: #002C44;
       border-bottom: 0.1em dotted #003552; }
+  .header__part--search .form-item, .header__part--search .form-actions {
+    margin: 0; }
 
 @media only all and (min-width: 41em) {
   .js .header__search-trigger, .no-js .header__search-trigger {
@@ -1345,7 +1357,14 @@ footer i {
     float: left; }
   .header__part--search {
     width: 50%;
-    float: left; }
+    float: left;
+    border-bottom: none; }
+  .header__part--search form {
+    padding: 1.3em 0 0 0;
+    width: 90%;
+    float: right; }
+  .header__part--search .search__container {
+    text-align: right; }
   .header__part--brand {
     text-align: left; }
   .header__part--brand .icon-sos-logo {
@@ -1401,7 +1420,9 @@ footer i {
 .nav__trigger {
   background-repeat: repeat;
   background-color: #002C44;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: 100;
+  border-top: 0.3em solid #002031; }
   .nav__trigger .icon-menu {
     width: 1.5em;
     height: 1.3125em;
@@ -1415,7 +1436,8 @@ footer i {
     float: left; }
 
 .main-nav {
-  font-size: 1em; }
+  font-size: 1em;
+  z-index: 100; }
 
 .main-nav li {
   background-color: #00283e;
@@ -1429,6 +1451,10 @@ footer i {
   color: #ffffff;
   border-bottom: none;
   padding: 0.6em 0 0.7em 8%; }
+
+.main-nav li a.active {
+  color: #ffc68b;
+  text-decoration: underline; }
 
 .main-nav .parent .sectiontoggle {
   display: none; }
@@ -1466,8 +1492,11 @@ footer i {
   .main-nav .sub-menu li a:before {
     content: "— "; }
 
-.main-nav li:hover a.parent-item {
+.main-nav li:hover a {
   text-decoration: underline; }
+
+.main-nav li:hover .sub-menu a {
+  text-decoration: none; }
 
 .main-nav .sub-menu li {
   background-color: #003552; }
@@ -1487,25 +1516,35 @@ footer i {
 
 .js nav.nav-collapse {
   position: fixed !important;
+  z-index: 100;
   -webkit-backface-visibility: hidden;
   bottom: 3.375em; }
 
-.js nav.nav-collapse.opened {
-  clip: auto;
-  width: 100%; }
-  .js nav.nav-collapse.opened .sub-menu {
-    max-height: 20em;
-    max-height: 50vh;
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch; }
+.js nav.nav-collapse .main-nav ul.sub-menu.open {
+  width: auto;
+  max-height: 20em;
+  max-height: 55vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch; }
+  .js nav.nav-collapse .main-nav ul.sub-menu.open:-webkit-scrollbar {
+    width: 0 !important; }
+
+@media only all and (max-width: 41em) {
+  .js .nav-collapse ul {
+    display: none; }
+  .js .nav-collapse.opened ul {
+    display: block; } }
 
 @media only all and (min-width: 41em) {
   .nav__trigger {
     display: none; }
   .js nav.nav-collapse {
-    position: static !important; }
+    position: static !important;
+    border-bottom: 0.3em solid #008EBE; }
   .main-nav li {
-    z-index: 5;
+    z-index: 100;
     width: 33.3333%;
     height: 4.8125em;
     float: left;
@@ -1517,11 +1556,16 @@ footer i {
   .js nav.nav-collapse .sub-menu.open {
     max-height: 85vh;
     overflow: scroll;
-    -webkit-overflow-scrolling: touch; }
+    -webkit-overflow-scrolling: touch;
+    min-width: 33.333%;
+    position: absolute;
+    margin-top: 4.7em; }
+    .js nav.nav-collapse .sub-menu.open li a {
+      padding: 0.7em 1.5em 0.7em 1em; }
   .main-nav .sub-menu {
-    z-index: 0; }
+    z-index: 100; }
   .main-nav .sub-menu li {
-    z-index: 0;
+    z-index: 100;
     width: 100%;
     float: none;
     height: auto; } }
@@ -1529,7 +1573,7 @@ footer i {
 @media only all and (min-width: 56em) {
   nav {
     background-color: #003552;
-    margin: 0 0 1.5em 0;
+    margin: 0 0 0 0;
     padding: 0 5% 0 5%; }
   .nav-collapse .main-nav {
     height: 6em;
@@ -1549,9 +1593,12 @@ footer i {
       background-color: inherit; }
     .main-nav li:last-child {
       margin-right: 0; }
+    .main-nav li a {
+      height: 6em; }
   .main-nav li.home, .main-nav li.contact-us {
     width: auto;
-    max-width: 10%; }
+    max-width: 5%;
+    margin-right: 5%; }
   .main-nav li.browse-films {
     width: 12%; }
   .main-nav li.resources {
@@ -1565,18 +1612,27 @@ footer i {
     visibility: hidden;
     position: absolute;
     left: auto;
-    margin-top: 6em;
+    margin-top: 5.9em;
     left: auto;
     width: 25%; }
+    .main-nav .sub-menu a {
+      height: auto; }
   .main-nav li:hover .sub-menu {
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 6em;
+    margin-top: 5.9em;
     left: auto;
     width: auto;
     margin-left: 0.8em; }
+    .main-nav li:hover .sub-menu li a {
+      padding: 0.6em 1em 0.6em 1em; }
+  .js nav.nav-collapse .main-nav ul.sub-menu.open {
+    margin: 4.7em 0 0 0.8em;
+    min-width: initial; }
+    .js nav.nav-collapse .main-nav ul.sub-menu.open li a {
+      padding: 0.6em 1em 0.6em 1em; }
   .main-nav .sub-menu li {
     height: auto;
     padding: 0 1em 0 0;
@@ -1584,27 +1640,35 @@ footer i {
 
 @media only all and (min-width: 58.75em) {
   .main-nav li.contact-us {
-    max-width: 12%; }
+    max-width: 7%; }
   .main-nav li.resources {
     max-width: 16%; } }
 
 @media only all and (min-width: 63.9375em) {
-  .main-nav li.home, .main-nav li.contact-us {
+  .main-nav li.home {
     width: 8%;
-    max-width: 8%; }
+    max-width: 8%;
+    margin-right: 2%; }
   .main-nav li.resources {
     max-width: 14%; }
   .main-nav li.browse-films {
     width: 14%; }
   .main-nav li.contact-us {
     width: 10%;
-    max-width: 10%; } }
+    max-width: 10%;
+    margin-right: 2%; } }
 
-@media only all and (min-width: 71.25em) {
+@media only all and (min-width: 68.125em) {
   nav, .nav-collapse .main-nav {
-    height: 5.4em; }
+    height: 4.9em; }
+  .main-nav li {
+    height: 4.5em; }
+  .nav-collapse .main-nav li a {
+    height: 4em; }
   .main-nav li:hover .sub-menu, .main-nav .sub-menu {
-    margin-top: 5.4em; } }
+    margin-top: 4.7em; }
+  .main-nav .sub-menu li a {
+    height: auto; } }
 
 @media only all and (min-width: 82.25em) {
   .main-nav li.about a.parent-item {
