--- a/html/css/output/patterns/0-navigation.css
+++ b/html/css/output/patterns/0-navigation.css
@@ -24,7 +24,9 @@
 .nav__trigger {
   background-repeat: repeat;
   background-color: #002C44;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: 100;
+  border-top: 0.3em solid #002031; }
   .nav__trigger .icon-menu {
     width: 1.5em;
     height: 1.3125em;
@@ -38,7 +40,8 @@
     float: left; }
 
 .main-nav {
-  font-size: 1em; }
+  font-size: 1em;
+  z-index: 100; }
 
 .main-nav li {
   background-color: #00283e;
@@ -52,6 +55,10 @@
   color: #ffffff;
   border-bottom: none;
   padding: 0.6em 0 0.7em 8%; }
+
+.main-nav li a.active {
+  color: #ffc68b;
+  text-decoration: underline; }
 
 .main-nav .parent .sectiontoggle {
   display: none; }
@@ -89,8 +96,11 @@
   .main-nav .sub-menu li a:before {
     content: "— "; }
 
-.main-nav li:hover a.parent-item {
+.main-nav li:hover a {
   text-decoration: underline; }
+
+.main-nav li:hover .sub-menu a {
+  text-decoration: none; }
 
 .main-nav .sub-menu li {
   background-color: #003552; }
@@ -110,25 +120,35 @@
 
 .js nav.nav-collapse {
   position: fixed !important;
+  z-index: 100;
   -webkit-backface-visibility: hidden;
   bottom: 3.375em; }
 
-.js nav.nav-collapse.opened {
-  clip: auto;
-  width: 100%; }
-  .js nav.nav-collapse.opened .sub-menu {
-    max-height: 20em;
-    max-height: 50vh;
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch; }
+.js nav.nav-collapse .main-nav ul.sub-menu.open {
+  width: auto;
+  max-height: 20em;
+  max-height: 55vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch; }
+  .js nav.nav-collapse .main-nav ul.sub-menu.open:-webkit-scrollbar {
+    width: 0 !important; }
+
+@media only all and (max-width: 41em) {
+  .js .nav-collapse ul {
+    display: none; }
+  .js .nav-collapse.opened ul {
+    display: block; } }
 
 @media only all and (min-width: 41em) {
   .nav__trigger {
     display: none; }
   .js nav.nav-collapse {
-    position: static !important; }
+    position: static !important;
+    border-bottom: 0.3em solid #008EBE; }
   .main-nav li {
-    z-index: 5;
+    z-index: 100;
     width: 33.3333%;
     height: 4.8125em;
     float: left;
@@ -140,11 +160,16 @@
   .js nav.nav-collapse .sub-menu.open {
     max-height: 85vh;
     overflow: scroll;
-    -webkit-overflow-scrolling: touch; }
+    -webkit-overflow-scrolling: touch;
+    min-width: 33.333%;
+    position: absolute;
+    margin-top: 4.7em; }
+    .js nav.nav-collapse .sub-menu.open li a {
+      padding: 0.7em 1.5em 0.7em 1em; }
   .main-nav .sub-menu {
-    z-index: 0; }
+    z-index: 100; }
   .main-nav .sub-menu li {
-    z-index: 0;
+    z-index: 100;
     width: 100%;
     float: none;
     height: auto; } }
@@ -152,7 +177,7 @@
 @media only all and (min-width: 56em) {
   nav {
     background-color: #003552;
-    margin: 0 0 1.5em 0;
+    margin: 0 0 0 0;
     padding: 0 5% 0 5%; }
   .nav-collapse .main-nav {
     height: 6em;
@@ -172,9 +197,12 @@
       background-color: inherit; }
     .main-nav li:last-child {
       margin-right: 0; }
+    .main-nav li a {
+      height: 6em; }
   .main-nav li.home, .main-nav li.contact-us {
     width: auto;
-    max-width: 10%; }
+    max-width: 5%;
+    margin-right: 5%; }
   .main-nav li.browse-films {
     width: 12%; }
   .main-nav li.resources {
@@ -188,18 +216,27 @@
     visibility: hidden;
     position: absolute;
     left: auto;
-    margin-top: 6em;
+    margin-top: 5.9em;
     left: auto;
     width: 25%; }
+    .main-nav .sub-menu a {
+      height: auto; }
   .main-nav li:hover .sub-menu {
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 6em;
+    margin-top: 5.9em;
     left: auto;
     width: auto;
     margin-left: 0.8em; }
+    .main-nav li:hover .sub-menu li a {
+      padding: 0.6em 1em 0.6em 1em; }
+  .js nav.nav-collapse .main-nav ul.sub-menu.open {
+    margin: 4.7em 0 0 0.8em;
+    min-width: initial; }
+    .js nav.nav-collapse .main-nav ul.sub-menu.open li a {
+      padding: 0.6em 1em 0.6em 1em; }
   .main-nav .sub-menu li {
     height: auto;
     padding: 0 1em 0 0;
@@ -207,27 +244,35 @@
 
 @media only all and (min-width: 58.75em) {
   .main-nav li.contact-us {
-    max-width: 12%; }
+    max-width: 7%; }
   .main-nav li.resources {
     max-width: 16%; } }
 
 @media only all and (min-width: 63.9375em) {
-  .main-nav li.home, .main-nav li.contact-us {
+  .main-nav li.home {
     width: 8%;
-    max-width: 8%; }
+    max-width: 8%;
+    margin-right: 2%; }
   .main-nav li.resources {
     max-width: 14%; }
   .main-nav li.browse-films {
     width: 14%; }
   .main-nav li.contact-us {
     width: 10%;
-    max-width: 10%; } }
+    max-width: 10%;
+    margin-right: 2%; } }
 
-@media only all and (min-width: 71.25em) {
+@media only all and (min-width: 68.125em) {
   nav, .nav-collapse .main-nav {
-    height: 5.4em; }
+    height: 4.9em; }
+  .main-nav li {
+    height: 4.5em; }
+  .nav-collapse .main-nav li a {
+    height: 4em; }
   .main-nav li:hover .sub-menu, .main-nav .sub-menu {
-    margin-top: 5.4em; } }
+    margin-top: 4.7em; }
+  .main-nav .sub-menu li a {
+    height: auto; } }
 
 @media only all and (min-width: 82.25em) {
   .main-nav li.about a.parent-item {
