--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -423,7 +423,7 @@ Performance is dramatically improved because a 9999px box is not drawn. Noticeab
   background-color: #C0E6F3; }
 
 /*! responsive-nav.js 1.0.32 by @viljamis */
-.nav-collapse ul, .guidenav-collapse ul, .search-collapse div {
+.nav-collapse ul, .login-collapse .login__container, .search-collapse .search__container {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -434,15 +434,17 @@ Performance is dramatically improved because a 9999px box is not drawn. Noticeab
   width: 100%;
   display: block; }
 
-.js .guidenav-collapse, .js .search-collapse, .js .nav-collapse {
+.js .login-collapse, .js .search-collapse, .js .nav-collapse {
   clip: rect(0 0 0 0);
   max-height: none;
   position: relative;
   display: block;
   zoom: 1; }
 
-.guidenav-collapse.opened, .search-collapse.opened, .nav-collapse.opened {
-  max-height: 9999px; }
+.login-collapse.opened, .search-collapse.opened, .nav-collapse.opened {
+  max-height: 9999px;
+  clip: auto;
+  width: 100%; }
 
 .disable-pointer-events {
   pointer-events: none !important; }
@@ -1677,6 +1679,203 @@ footer i {
 @media only all and (min-width: 96.25em) {
   .main-nav li.about a.parent-item {
     max-width: 55%; } }
+
+.pattern {
+  background: url(../../assets/pattern.png);
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern {
+  background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
+.login__trigger.cta, .logout__trigger.cta {
+  font-size: 0.9em;
+  max-width: 10em;
+  padding: 0.5em 0.8em 0.5em 0.8em;
+  margin: 0 auto 0 auto;
+  display: block;
+  border-left: 1em solid #002C44;
+  cursor: pointer; }
+  .login__trigger.cta .icon-arrow-down, .login__trigger.cta .icon-arrow-up, .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-down, .logout__trigger.cta .icon-arrow-up, .logout__trigger.cta .icon-arrow-right {
+    width: 0.625em;
+    margin: 0.7em 0 0 0;
+    float: right; }
+  .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-right {
+    margin: 0.5em 0 0 0; }
+  .login__trigger.cta span, .logout__trigger.cta span {
+    width: auto;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    padding: 0.2em 0 0 0;
+    float: left; }
+  .login__trigger.cta div, .logout__trigger.cta div {
+    width: auto;
+    padding: 0; }
+
+.login__trigger--top.cta {
+  max-width: 100%;
+  text-align: center;
+  padding: 0.5em 8% 0.5em 5%; }
+
+.login__trigger--top.cta .login__trigger--top__container {
+  display: inline-block;
+  width: 100%;
+  max-width: 24.4em;
+  margin: 0 auto;
+  float: none; }
+
+.login__sso, .login__cms {
+  padding: 1.5em 8% 1.5em 8%; }
+
+.login__sso {
+  background-color: #0079A1; }
+  .login__sso .sso__block__label {
+    width: 100%;
+    font-size: 1.2em;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0 0 1em 0; }
+  .login__sso .login__sso__block--shibboleth .btn {
+    margin-bottom: 0; }
+    .login__sso .login__sso__block--shibboleth .btn:hover {
+      box-shadow: inset 0 0 0 0.2em #00be66; }
+
+.login__cms {
+  padding-top: 2em;
+  background-color: #003552; }
+  .login__cms .login__cms__label {
+    font-size: 1.2em;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0 0 0.5em 0; }
+  .login__cms form {
+    padding: 0;
+    max-width: 20em;
+    margin: 0; }
+  .login__cms .item-list {
+    margin-bottom: 0.5em; }
+  .login__cms .item-list ul, .login__cms .item-list ul li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  .login__cms .item-list a {
+    color: #C0E6F3; }
+    .login__cms .item-list a:hover {
+      color: #ffffff;
+      border-bottom: 0.1em dotted #ffffff; }
+  .login__cms form .btn {
+    margin: 0; }
+  .login__cms input[type=text], .login__cms input[type=password] {
+    margin-bottom: 0; }
+
+@media only all and (min-width: 37em) {
+  .login__sso .sso__block__label {
+    width: auto;
+    margin-right: 1em; } }
+
+@media only all and (min-width: 41em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    background-color: #0079A1;
+    background-image: none; }
+  .login__trigger--top.cta {
+    background-color: #001f30;
+    padding: 0.7em 8% 0.5em 8%; }
+    .login__trigger--top.cta:hover {
+      background-color: #002C44; }
+  .login__trigger--top.cta .login__trigger--top__container {
+    max-width: 10em; }
+  .login__sso {
+    background-color: #008EBE;
+    padding-bottom: 2em; }
+    .login__sso .login__sso__block {
+      width: 50%;
+      float: left; }
+    .login__sso .login__sso__block span {
+      width: 100%; }
+    .login__sso .login__sso__block--rm-unify .btn {
+      margin-bottom: 0; } }
+
+@media only all and (min-width: 46.625em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    float: right; }
+  .login__trigger--top.cta {
+    display: none; }
+  .login__cms form {
+    max-width: 80em; }
+  .login__cms .form-item {
+    width: 40%;
+    float: left;
+    margin-right: 5%;
+    margin-top: 0.9em; }
+  .login__cms .form-actions {
+    float: left;
+    width: 10%; }
+    .login__cms .form-actions .btn {
+      height: 2.275em;
+      margin-top: 1.6em; } }
+
+@media only all and (min-width: 50em) and (max-width: 79em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    margin: 0 5% 0 0; } }
+
+@media only all and (min-width: 63.9375em) {
+  .login__cms {
+    padding-top: 1em; }
+  .login__cms .login__cms__label {
+    width: 20%;
+    margin: 2em 10% 0.5em 0;
+    float: left; }
+  .login__cms form {
+    width: 70%;
+    float: left; }
+  .login__cms .item-list {
+    float: left;
+    width: 100%; } }
+
+@media only all and (min-width: 71.25em) {
+  .login__cms .login__cms__label {
+    width: 20%;
+    margin-right: 5%; }
+  .login__cms form {
+    width: 75%;
+    float: left; }
+  .login__trigger.cta.active {
+    margin-top: 0em; } }
+
+@media only all and (min-width: 77em) {
+  .login__sso {
+    padding-bottom: 1.5em; }
+  .login__sso .login__sso__block span {
+    width: auto; } }
+
+@media only all and (min-width: 79em) {
+  .login__cms .login__cms__label {
+    width: 13.125em;
+    margin-right: 0.5em; }
+  .login__trigger.cta, .logout__trigger.cta {
+    margin-right: 5%; } }
+
+@media only all and (min-width: 88.75em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    margin-right: 0; }
+  .login__cms .form-item {
+    width: 30%;
+    float: left;
+    margin-right: 5%; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
