--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1419,6 +1419,203 @@ footer i {
 .bg--light-pastel {
   background-color: #C0E6F3; }
 
+.login__trigger.cta, .logout__trigger.cta {
+  font-size: 0.9em;
+  max-width: 10em;
+  padding: 0.5em 0.8em 0.5em 0.8em;
+  margin: 0 auto 0 auto;
+  display: block;
+  border-left: 1em solid #002C44;
+  cursor: pointer; }
+  .login__trigger.cta .icon-arrow-down, .login__trigger.cta .icon-arrow-up, .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-down, .logout__trigger.cta .icon-arrow-up, .logout__trigger.cta .icon-arrow-right {
+    width: 0.625em;
+    margin: 0.7em 0 0 0;
+    float: right; }
+  .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-right {
+    margin: 0.5em 0 0 0; }
+  .login__trigger.cta span, .logout__trigger.cta span {
+    width: auto;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    padding: 0.2em 0 0 0;
+    float: left; }
+  .login__trigger.cta div, .logout__trigger.cta div {
+    width: auto;
+    padding: 0; }
+
+.login__trigger--top.cta {
+  max-width: 100%;
+  text-align: center;
+  padding: 0.5em 8% 0.5em 5%; }
+
+.login__trigger--top.cta .login__trigger--top__container {
+  display: inline-block;
+  width: 100%;
+  max-width: 24.4em;
+  margin: 0 auto;
+  float: none; }
+
+.login__sso, .login__cms {
+  padding: 1.5em 8% 1.5em 8%; }
+
+.login__sso {
+  background-color: #0079A1; }
+  .login__sso .sso__block__label {
+    width: 100%;
+    font-size: 1.2em;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0 0 1em 0; }
+  .login__sso .login__sso__block--shibboleth .btn {
+    margin-bottom: 0; }
+    .login__sso .login__sso__block--shibboleth .btn:hover {
+      box-shadow: inset 0 0 0 0.2em #00be66; }
+
+.login__cms {
+  padding-top: 2em;
+  background-color: #003552; }
+  .login__cms .login__cms__label {
+    font-size: 1.2em;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0 0 0.5em 0; }
+  .login__cms form {
+    padding: 0;
+    max-width: 20em;
+    margin: 0; }
+  .login__cms .item-list {
+    margin-bottom: 0.5em; }
+  .login__cms .item-list ul, .login__cms .item-list ul li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  .login__cms .item-list a {
+    color: #C0E6F3; }
+    .login__cms .item-list a:hover {
+      color: #ffffff;
+      border-bottom: 0.1em dotted #ffffff; }
+  .login__cms form .btn {
+    margin: 0; }
+  .login__cms input[type=text], .login__cms input[type=password] {
+    margin-bottom: 0; }
+
+@media only all and (min-width: 37em) {
+  .login__sso .sso__block__label {
+    width: auto;
+    margin-right: 1em; } }
+
+@media only all and (min-width: 41em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    background-color: #0079A1;
+    background-image: none; }
+  .login__trigger--top.cta {
+    background-color: #001f30;
+    padding: 0.7em 8% 0.5em 8%; }
+    .login__trigger--top.cta:hover {
+      background-color: #002C44; }
+  .login__trigger--top.cta .login__trigger--top__container {
+    max-width: 10em; }
+  .login__sso {
+    background-color: #008EBE;
+    padding-bottom: 2em; }
+    .login__sso .login__sso__block {
+      width: 50%;
+      float: left; }
+    .login__sso .login__sso__block span {
+      width: 100%; }
+    .login__sso .login__sso__block--rm-unify .btn {
+      margin-bottom: 0; } }
+
+@media only all and (min-width: 46.625em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    float: right; }
+  .login__trigger--top.cta {
+    display: none; }
+  .login__cms form {
+    max-width: 80em; }
+  .login__cms .form-item {
+    width: 40%;
+    float: left;
+    margin-right: 5%;
+    margin-top: 0.9em; }
+  .login__cms .form-actions {
+    float: left;
+    width: 10%; }
+    .login__cms .form-actions .btn {
+      height: 2.275em;
+      margin-top: 1.6em; } }
+
+@media only all and (min-width: 50em) and (max-width: 79em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    margin: 0 5% 0 0; } }
+
+@media only all and (min-width: 63.9375em) {
+  .login__cms {
+    padding-top: 1em; }
+  .login__cms .login__cms__label {
+    width: 20%;
+    margin: 2em 10% 0.5em 0;
+    float: left; }
+  .login__cms form {
+    width: 70%;
+    float: left; }
+  .login__cms .item-list {
+    float: left;
+    width: 100%; } }
+
+@media only all and (min-width: 71.25em) {
+  .login__cms .login__cms__label {
+    width: 20%;
+    margin-right: 5%; }
+  .login__cms form {
+    width: 75%;
+    float: left; }
+  .login__trigger.cta.active {
+    margin-top: 0em; } }
+
+@media only all and (min-width: 77em) {
+  .login__sso {
+    padding-bottom: 1.5em; }
+  .login__sso .login__sso__block span {
+    width: auto; } }
+
+@media only all and (min-width: 79em) {
+  .login__cms .login__cms__label {
+    width: 13.125em;
+    margin-right: 0.5em; }
+  .login__trigger.cta, .logout__trigger.cta {
+    margin-right: 5%; } }
+
+@media only all and (min-width: 88.75em) {
+  .login__trigger.cta, .logout__trigger.cta {
+    margin-right: 0; }
+  .login__cms .form-item {
+    width: 30%;
+    float: left;
+    margin-right: 5%; } }
+
+.pattern {
+  background: url(../../assets/pattern.png);
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern {
+  background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .nav__trigger {
   background-repeat: repeat;
   background-color: #002C44;
@@ -1679,203 +1876,6 @@ footer i {
 @media only all and (min-width: 96.25em) {
   .main-nav li.about a.parent-item {
     max-width: 55%; } }
-
-.pattern {
-  background: url(../../assets/pattern.png);
-  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
-  /* This trick ensures that our background SVG is only 
-    used in browsers that support it (a 'coincidence'
-    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
-
-.icon-pattern {
-  background-repeat: repeat; }
-
-.bg--dark {
-  background-color: #003552; }
-
-.bg--mid {
-  background-color: #008EBE; }
-
-.bg--light {
-  background-color: #52CEF4; }
-
-.bg--light-pastel {
-  background-color: #C0E6F3; }
-
-.login__trigger.cta, .logout__trigger.cta {
-  font-size: 0.9em;
-  max-width: 10em;
-  padding: 0.5em 0.8em 0.5em 0.8em;
-  margin: 0 auto 0 auto;
-  display: block;
-  border-left: 1em solid #002C44;
-  cursor: pointer; }
-  .login__trigger.cta .icon-arrow-down, .login__trigger.cta .icon-arrow-up, .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-down, .logout__trigger.cta .icon-arrow-up, .logout__trigger.cta .icon-arrow-right {
-    width: 0.625em;
-    margin: 0.7em 0 0 0;
-    float: right; }
-  .login__trigger.cta .icon-arrow-right, .logout__trigger.cta .icon-arrow-right {
-    margin: 0.5em 0 0 0; }
-  .login__trigger.cta span, .logout__trigger.cta span {
-    width: auto;
-    font-size: 1.1em;
-    text-transform: uppercase;
-    padding: 0.2em 0 0 0;
-    float: left; }
-  .login__trigger.cta div, .logout__trigger.cta div {
-    width: auto;
-    padding: 0; }
-
-.login__trigger--top.cta {
-  max-width: 100%;
-  text-align: center;
-  padding: 0.5em 8% 0.5em 5%; }
-
-.login__trigger--top.cta .login__trigger--top__container {
-  display: inline-block;
-  width: 100%;
-  max-width: 24.4em;
-  margin: 0 auto;
-  float: none; }
-
-.login__sso, .login__cms {
-  padding: 1.5em 8% 1.5em 8%; }
-
-.login__sso {
-  background-color: #0079A1; }
-  .login__sso .sso__block__label {
-    width: 100%;
-    font-size: 1.2em;
-    color: #ffffff;
-    display: inline-block;
-    margin: 0 0 1em 0; }
-  .login__sso .login__sso__block--shibboleth .btn {
-    margin-bottom: 0; }
-    .login__sso .login__sso__block--shibboleth .btn:hover {
-      box-shadow: inset 0 0 0 0.2em #00be66; }
-
-.login__cms {
-  padding-top: 2em;
-  background-color: #003552; }
-  .login__cms .login__cms__label {
-    font-size: 1.2em;
-    color: #ffffff;
-    display: inline-block;
-    margin: 0 0 0.5em 0; }
-  .login__cms form {
-    padding: 0;
-    max-width: 20em;
-    margin: 0; }
-  .login__cms .item-list {
-    margin-bottom: 0.5em; }
-  .login__cms .item-list ul, .login__cms .item-list ul li {
-    list-style-type: none;
-    margin: 0;
-    padding: 0; }
-  .login__cms .item-list a {
-    color: #C0E6F3; }
-    .login__cms .item-list a:hover {
-      color: #ffffff;
-      border-bottom: 0.1em dotted #ffffff; }
-  .login__cms form .btn {
-    margin: 0; }
-  .login__cms input[type=text], .login__cms input[type=password] {
-    margin-bottom: 0; }
-
-@media only all and (min-width: 37em) {
-  .login__sso .sso__block__label {
-    width: auto;
-    margin-right: 1em; } }
-
-@media only all and (min-width: 41em) {
-  .login__trigger.cta, .logout__trigger.cta {
-    background-color: #0079A1;
-    background-image: none; }
-  .login__trigger--top.cta {
-    background-color: #001f30;
-    padding: 0.7em 8% 0.5em 8%; }
-    .login__trigger--top.cta:hover {
-      background-color: #002C44; }
-  .login__trigger--top.cta .login__trigger--top__container {
-    max-width: 10em; }
-  .login__sso {
-    background-color: #008EBE;
-    padding-bottom: 2em; }
-    .login__sso .login__sso__block {
-      width: 50%;
-      float: left; }
-    .login__sso .login__sso__block span {
-      width: 100%; }
-    .login__sso .login__sso__block--rm-unify .btn {
-      margin-bottom: 0; } }
-
-@media only all and (min-width: 46.625em) {
-  .login__trigger.cta, .logout__trigger.cta {
-    float: right; }
-  .login__trigger--top.cta {
-    display: none; }
-  .login__cms form {
-    max-width: 80em; }
-  .login__cms .form-item {
-    width: 40%;
-    float: left;
-    margin-right: 5%;
-    margin-top: 0.9em; }
-  .login__cms .form-actions {
-    float: left;
-    width: 10%; }
-    .login__cms .form-actions .btn {
-      height: 2.275em;
-      margin-top: 1.6em; } }
-
-@media only all and (min-width: 50em) and (max-width: 79em) {
-  .login__trigger.cta, .logout__trigger.cta {
-    margin: 0 5% 0 0; } }
-
-@media only all and (min-width: 63.9375em) {
-  .login__cms {
-    padding-top: 1em; }
-  .login__cms .login__cms__label {
-    width: 20%;
-    margin: 2em 10% 0.5em 0;
-    float: left; }
-  .login__cms form {
-    width: 70%;
-    float: left; }
-  .login__cms .item-list {
-    float: left;
-    width: 100%; } }
-
-@media only all and (min-width: 71.25em) {
-  .login__cms .login__cms__label {
-    width: 20%;
-    margin-right: 5%; }
-  .login__cms form {
-    width: 75%;
-    float: left; }
-  .login__trigger.cta.active {
-    margin-top: 0em; } }
-
-@media only all and (min-width: 77em) {
-  .login__sso {
-    padding-bottom: 1.5em; }
-  .login__sso .login__sso__block span {
-    width: auto; } }
-
-@media only all and (min-width: 79em) {
-  .login__cms .login__cms__label {
-    width: 13.125em;
-    margin-right: 0.5em; }
-  .login__trigger.cta, .logout__trigger.cta {
-    margin-right: 5%; } }
-
-@media only all and (min-width: 88.75em) {
-  .login__trigger.cta, .logout__trigger.cta {
-    margin-right: 0; }
-  .login__cms .form-item {
-    width: 30%;
-    float: left;
-    margin-right: 5%; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
@@ -2293,8 +2293,21 @@ ol ul li:before {
   text-align: center;
   margin: 0 0 2em 0; }
 
-.list__jump-nav .heading {
-  font-size: 1.2em; }
+.list__jump-nav h2.heading:first-child {
+  display: block;
+  font-size: 1.4em;
+  margin: 0 0 1em 0;
+  color: #002C44; }
+
+.list__jump-nav__select {
+  display: none; }
+
+.js .list__jump-nav__select {
+  display: inline-block;
+  margin: 0 0 0.5em 0; }
+
+.js .list__jump-nav ol {
+  display: none; }
 
 .list__jump-nav ol {
   list-style: none;
@@ -2332,9 +2345,24 @@ ol ul li:before {
     .list__jump-nav li.not-available a:hover {
       background-color: #C0E6F3; }
 
+.list__content .heading {
+  color: #002C44; }
+
+.list__content .heading span {
+  font-weight: 300;
+  color: #C0E6F3;
+  display: inline-block;
+  margin: 0 0.5em 0 0.2em; }
+
+.list__content__back-to-top {
+  font-size: 0.82em;
+  font-weight: 300;
+  font-style: italic;
+  color: #0079A1; }
+
 .list__content ol {
   list-style: none;
-  margin: 0 0 1.5em 0; }
+  margin: 0 0 2.5em 0; }
 
 .list__content .list__content__item {
   margin: 0 0 1em 0; }
@@ -2352,14 +2380,42 @@ ol ul li:before {
   margin: 0.5em 0 0 0;
   font-style: italic; }
 
+@media only all and (min-width: 30em) {
+  .js .list__jump-nav__select {
+    display: none; }
+  .js .list__jump-nav ol {
+    display: inline-block; } }
+
 @media only all and (min-width: 41em) {
+  .list__jump-nav {
+    margin: 0 0 3em 0; }
   .list__jump-nav ol {
     max-width: 80%;
     margin: 0 auto; }
   .list__content .list__content__item span {
     display: inline; }
     .list__content .list__content__item span:before {
-      content: "— "; } }
+      content: "— "; }
+  .list__content ol {
+    margin: 0 0 3.5em 0; } }
+
+@media only all and (min-width: 56em) {
+  .list__content {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    -moz-column-gap: 4%;
+    -webkit-column-gap: 4%;
+    column-gap: 4%; }
+  .list__content__container {
+    display: inline-block;
+    width: 90%;
+    margin-right: 10%;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    /* Makes effect only in Firefox v20+ */
+    break-inside: avoid;
+    /* IE10+, Opera 11.1—12.1 */ } }
 
 .pattern {
   background: url(../../assets/pattern.png);
