--- a/html/css/output/patterns/06-tab-ui.css
+++ b/html/css/output/patterns/06-tab-ui.css
@@ -30,7 +30,7 @@
   display: inline-block;
   width: 100%;
   padding: 0 0 0 0.2em;
-  margin: 0 0 1.5em 0;
+  margin: 0 0 0 0;
   background-color: #d3eef7; }
 
 .js-tabs .tabs [role=tab] {
@@ -39,7 +39,9 @@
   text-align: center;
   margin: 0 0 0.2em 0;
   background-color: #008EBE;
-  color: #ffffff; }
+  color: #ffffff;
+  line-height: 2.75;
+  cursor: pointer; }
   .js-tabs .tabs [role=tab]:hover {
     text-decoration: underline; }
 
@@ -47,7 +49,8 @@
   list-style-type: none;
   display: block;
   text-align: center;
-  padding: 0.5em 0 0.2em 0; }
+  padding: 0.5em 0 0.2em 0;
+  margin: 0; }
   .js-tabs .tabs .tabs__print-all a {
     display: inline-block;
     width: 100%;
@@ -55,12 +58,12 @@
   .js-tabs .tabs .tabs__print-all:hover {
     text-decoration: underline; }
 
-.js-tabs .tabs.js-tab-ui [aria-selected=true] {
+.js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true] {
   background-color: #003552;
   border: none; }
 
 @media only all and (min-width: 41em) {
-  .js-tabs .tabs li, .js-tabs .tabs.js-tab-ui [aria-selected=true] {
+  .js-tabs .tabs .js-tabs-list li, .js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true] {
     border-right: 0.2em solid #d3eef7; }
   .js-tabs .tabs [role=tab] {
     display: inline-block;
@@ -83,7 +86,7 @@
   .js-tabs .tabs [role=tablist] {
     padding: 0;
     box-shadow: 0 0.5em 0.5em 0em #ffffff; }
-  .js-tabs .tabs li, .js-tabs .tabs.js-tab-ui [aria-selected=true] {
+  .js-tabs .tabs .js-tabs-list li, .js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true] {
     border-right: none; }
   .js-tabs .tabs [role=tab] {
     display: inline-block;
@@ -105,24 +108,30 @@
     text-align: right;
     margin: 0 0 0 0;
     width: 15%;
-    padding: 0.2em 1em 0.85em 0;
+    padding: 0.2em 1em 0.86em 0;
     border-bottom: 0.15em solid #52bbde; }
     .js-tabs .tabs .tabs__print-all a {
       color: #002C44;
-      text-align: right; }
-  .js-tabs .tabs.js-tab-ui [aria-selected=true] {
+      text-align: right;
+      text-decoration: underline; }
+  .js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true] {
     color: #008EBE;
     font-weight: 600;
     background-color: #ffffff;
     border: 0.15em solid #52bbde;
     border-color: #52bbde;
     border-bottom: 0.15em solid #ffffff; }
-    .js-tabs .tabs.js-tab-ui [aria-selected=true]:focus {
+    .js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true]:focus {
       border-color: #dc6f00;
       border-bottom: 0.15em solid #ffffff;
       text-decoration: underline;
       color: #003552;
-      outline: none; } }
+      outline: none; }
+  .js-tabs .tabs.js-tab-ui .js-tabs-list .tabs__print-all[aria-selected=true] {
+    background-color: inherit;
+    border: 0;
+    font-weight: 400;
+    border-bottom: 0.15em solid #52bbde; } }
 
 /* Prevent FOUC */
 .js-tabs .tabs .js-panel {
