Defaults and content indexes changes

--- a/html/css/sass/_3-defaults.scss
+++ b/html/css/sass/_3-defaults.scss
@@ -4,6 +4,10 @@
 //::: PURPOSE: Default non-reset browser / box model fixes, 
 //::: any other default choices we use across projects.
 
+.hidden {
+	display: none;
+}
+
 // Make everything to behave as IE box model - 
 // see http://quirksmode.org/css/user-interface/boxsizing.html
 
