--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -321,6 +321,9 @@ table {
 td, th {
   padding: 0; }
 
+.hidden {
+  display: none; }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
