Further unchecked updates from SoS including 02-buttons, 06-subnavigation, 13-responsive-tables

--- a/html/css/output/patterns/13-responsive-tables.css
+++ b/html/css/output/patterns/13-responsive-tables.css
@@ -77,6 +77,9 @@ tr {
   border-bottom: 0.2em solid #C0E6F3;
   padding: 1em; }
 
+td {
+  word-break: break-all; }
+
 /* Arbitrary breakpoint from handheld -> 
 full layout - your choice should vary depending 
 at what width your table columns can be shown side 
