--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -2032,7 +2032,7 @@ body {
 
 /* Buttons / CTAs */
 .btn {
-  font-size: 1.1em;
+  font-size: 1.13em;
   background-color: #003552;
   color: #fff;
   display: inline-block;
@@ -2665,7 +2665,7 @@ ol.pagination li {
   background-color: #C0E6F3; }
 
 .subnav {
-  margin: 0 0 3em 0; }
+  margin: 0 0 4em 0; }
 
 .subnav em {
   display: inline-block;
@@ -3138,6 +3138,9 @@ tr {
   border-top: 0.2em solid #003552;
   border-bottom: 0.2em solid #C0E6F3;
   padding: 1em; }
+
+td {
+  word-break: break-all; }
 
 /* Arbitrary breakpoint from handheld -> 
 full layout - your choice should vary depending 
