--- a/html/css/sass/patterns/13-responsive-tables.scss
+++ b/html/css/sass/patterns/13-responsive-tables.scss
@@ -68,6 +68,10 @@ tr {
   padding: 1em;
 }
 
+td {
+	word-break: break-all;
+}
+
 /* Arbitrary breakpoint from handheld -> 
 full layout - your choice should vary depending 
 at what width your table columns can be shown side 
