Guide modifications to provide UI for switching site theme, and the plumbing to ensure that the selected theme is where all our pattern CSS and JS come from. HTML patterns are still shared.

--- a/html/sos/css/output/global.css
+++ b/html/sos/css/output/global.css
@@ -613,6 +613,11 @@ body {
 #guidenav-trigger {
   display: none; }
 
+.heading-wrapper.heading--themeselect {
+  padding-top: 1.5em; }
+  .heading-wrapper.heading--themeselect select {
+    max-width: 20em; }
+
 .nav-wrapper {
   background-color: #101010; }
   @media only all and (min-width: 41em) {
