--- a/html/ss/css/sass/_4-colours.scss
+++ b/html/ss/css/sass/_4-colours.scss
@@ -66,3 +66,9 @@ $disabled: #ccc;
 .bg--light-pastel {
   background-color: $light-pastel;
 }
+
+//// Misc Colour Class settings
+
+// The header on SS is a custom colour variant
+
+$header: #5C251B;
