--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -1283,10 +1283,13 @@ footer i {
   background-color: #C0E6F3; }
 
 .header {
-  background-color: #ffffff;
+  background-color: #5C251B;
   width: 100%;
   margin: 0;
   text-align: center; }
+
+.header * {
+  border: 0.1em solid #000; }
 
 .header__part {
   height: 10.375em;
